<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_name"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Please enter your name"
                android:inputType="textCapWords"
                android:layout_marginTop="8dp"
                tools:text="Please enter your name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_number"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Please enter your contact"
                android:inputType="phone"
                android:layout_marginTop="8dp"
                tools:text="Please enter your contact"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_display_name"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Please enter your display number"
                android:inputType="textCapWords"
                android:layout_marginTop="8dp"
                tools:text="Please enter your display number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox_junior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_text_include_junior"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/spinner_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@android:layout/simple_spinner_item"
            android:layout_marginTop="8dp"/>

        <CheckBox
            android:id="@+id/checkbox_immediate_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_text_immediate_start"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_available_from_date"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Enter date"
                android:layout_marginTop="8dp"
                android:inputType="date"
                tools:text="Enter date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_preview"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="24dp"/>

    </LinearLayout>

</ScrollView>